# mcp-server-demo

./: Dockerfile  README.md  build_docker.sh  claude_desktop_config.json  deploy_script.sh  pyproject.toml  run_deploy_script.sh  server.py  test_build_docker.sh
DOC/: alternativas.md  claude_desktop_config.json  feed_200_prod.prompt.md  old-enterprise_mcp_server.py
agents/amazon/: agent_amazon.py  instructions.txt
libs/amazon/: __init__.py  example_usage.py  lib_amazon.py  models.py
tools/amazon/: tool_amazon_search_items.py
utils/: logger_hook.py
